- minor moons + major moons now specified - adding classes to specific moon types so can fade them in + out when zoomed to prevent overlapping (not doing clustering)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -198,7 +198,7 @@ body::before {
 	will-change: transform;
 	box-shadow: 0 0 0 currentColor;
 	/* transition: background-color 0.4s ease, opacity 0.4s ease, border-color 0.4s ease; */
-	transition: background-color 0.4s ease, border-color 0.4s ease;
+	transition: background-color 0.4s ease, border-color 0.4s ease, opacity 0.4s ease;
 }
 
 .label .label-text {
@@ -214,7 +214,17 @@ body::before {
 	font-weight: 700;
 	text-shadow: 1px 1px 0 black, -1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, 0 0 3px black;
 	padding: 3px 4px;
-	transition: border-width 0.2s ease, color 0.2s ease;
+	transition: border-width 0.2s ease, color 0.2s ease, opacity 0.2s ease;
+}
+
+.label.faded .label-text,
+.label.faded .label-circle {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.label.is-moon.is-major-moon .label-text {
+	color: rgb(255, 255, 255);
 }
 
 .label:hover .label-circle {
@@ -230,10 +240,6 @@ body::before {
 
 .label[data-label-name='sun'] {
 	background-color: transparent;
-}
-
-.label.is-moon {
-	opacity: 0;
 }
 
 .buttons-container {
